fix: enable hyphenation to prevent content overflow

--- a/sass/_typography.sass
+++ b/sass/_typography.sass
@@ -8,6 +8,9 @@ body
   font-family: $sans-serif-fonts
   line-height: 1.6
   font-size: 13pt
+  overflow-wrap: anywhere
+  hyphens: auto
+  -webkit-hyphens: auto
 
 header
   background-color: white
